--- a/index.html
+++ b/index.html
@@ -6,19 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
 <body>
     
-<h1>O QUE E TECNICO DE DESENVO</h1>
+<header>
+    <ul>
+        <li>quem somos</li>
+        <li>quem somos</li>
+        <li>,a href="amigos.html</amigos
+    </ul>
+</header>
 
 
 
 
-<img class="src"
 
 
 
 
 
 
-</body>
-</html>
+
+<h1>TECNICO DE DESENVOLVIMENTO DE SISTEMAS</h1>
+<h2>O QUE ELE FAZ?</h2>
+<p>O Técnico em Desenvolvimento de Sistemas desenvolve programas para computadores e outros dispositivos computacionais como, por exemplo, aparelhos celulares e tablets, visando a automação de todos os processos relativos às Tecnologias de Informação e Comunicação (TIC),</p>
+<h3>NO QUE CONSISTE O CURSO TECNICO?</h3>
+<p>É uma graduação de nível tecnológico que torna o estudante apto a projetar, testar, implantar e gerenciar sistemas e recursos que envolvem Hardware e Software.</p>
+
+
+
+
+
+
+
+
