--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li>quem somos</li>
         <li>quem somos</li>
-        <li>,a href="amigos.html</amigos
+        <li><a href="amigos.html></a></amigos></li>
     </ul>
 </header>
 
