--- a/index.html
+++ b/index.html
@@ -9,35 +9,26 @@
 
 
 <body>
-    
-<header>
-    <ul>
-        <li>quem somos</li>
-        <li>quem somos</li>
-        <li><a href="amigos.html></a></amigos></li>
-    </ul>
-</header>
-
-
-
-
-
-
-
-
-
-
+    <header>
+        <ul>
+            <li>Quem Somos</li>
+            <li>O colégio</li>
+            <li><a href="amigos.html">Amigos</a></li>
+        </ul>
+    </header>
 
 <h1>TECNICO DE DESENVOLVIMENTO DE SISTEMAS</h1>
 <h2>O QUE ELE FAZ?</h2>
-<p>O Técnico em Desenvolvimento de Sistemas desenvolve programas para computadores e outros dispositivos computacionais como, por exemplo, aparelhos celulares e tablets, visando a automação de todos os processos relativos às Tecnologias de Informação e Comunicação (TIC),</p>
+<p>O Técnico em Desenvolvimento de Sistemas desenvolve programas para computadores e outros dispositivos computacionais como, por exemplo, aparelhos celulares e tablets, visando a automação de todos os processos relativos às Tecnologias de Informação e Comunicação (TIC).</p>
 <h3>NO QUE CONSISTE O CURSO TECNICO?</h3>
 <p>É uma graduação de nível tecnológico que torna o estudante apto a projetar, testar, implantar e gerenciar sistemas e recursos que envolvem Hardware e Software.</p>
 
+<img src="https://e0.pxfuel.com/wallpapers/505/356/desktop-wallpaper-computer-programming.jpg">
 
 
 
 
+</body>
 
 
-
+</html>
