--- a/curso.html
+++ b/curso.html
@@ -15,22 +15,15 @@
     <h1><img src="https://thumbs.dreamstime.com/b/c%C3%B3digo-fonte-e-papel-de-parede-do-desktop-pela-linguagem-programa%C3%A7%C3%A3o-com-codi-124424262.jpg"></h1>
     <nav>
     <ul>
-    <li><<</li>
+    <li><a href="index.html">home</a></li>
+     <li><a href="index.html">home</a></li>
+         <li><a href="index.html">home</a></li>
 
-
-    </ul>
-
-    </nav>
-
-
-
-
+       </ul>
+     </nav>
 </header>
 
-
-
-
-
+                           </header>
 
 
 </body>
