--- a/amigos.html
+++ b/amigos.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-        <ul>
+        <div class="caixa">
+            <h1
+
+              <ul>
             <li>Quem Somos</li>
             <li>O colégio</li>
             <li><a href="amigos.html">Amigos</a></li>
-        </ul>
+        </ul>  
+        </div>
+    
     </header>
+    <map
 <h1></h1>
 <p>O curso técnico em desenvolvimento de sistemas dura, no mínimo, um ano e meio. Ele prepara os alunos para os setores da tecnologias de informação e comunicação, como em sistemas distribuídos, jogos digitais e computação em nuvem.</p>
 
