--- a/curso.html
+++ b/curso.html
@@ -23,10 +23,26 @@
      </nav>
 </header>
 
+<main>
+  <ul class="professor">
+    <li>
+      <h2></h2>
+
+    </li>
+  </ul>
+</main>
 
 
-</header>
+
+}
+
+
+
+
+
 
 
 </body>
 </html>
+</header>
+
