--- a/curso.html
+++ b/curso.html
@@ -15,9 +15,9 @@
     <h1><img src="https://thumbs.dreamstime.com/b/c%C3%B3digo-fonte-e-papel-de-parede-do-desktop-pela-linguagem-programa%C3%A7%C3%A3o-com-codi-124424262.jpg"></h1>
     <nav>
     <ul>
-    <li><a href="index.html">ci</a></li>
-     <li><a href="index.html">home</a></li>
-         <li><a href="index.html">home</a></li>
+    <li><a href="index.html">materias</a></li>
+     <li><a href="index.html">professores</a></li>
+         <li><a href="index.html">sala de aula</a></li>
 
        </ul>
      </nav>
@@ -27,7 +27,18 @@
   <ul class="professor">
     <li>
       <h2></h2>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
+      <p class="    -d">=</p>
+      <p class="     -p">-</p>
+<footer>
+  <img src="     ">
+<p class="     ">     </p>
 
+
+</footer>
+
+
+    
     </li>
   </ul>
 </main>
