--- a/curso.html
+++ b/curso.html
@@ -26,16 +26,16 @@
 <main>
   <ul class="professor">
     <li>
-      <h2></h2>
+      <h2>o que fazemos?</h2>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
       <p class="    -d">=</p>
       <p class="     -p">-</p>
 <footer>
   <img src="     ">
 <p class="     ">     </p>
-
-
 </footer>
+
+
 
 
     
