--- a/curso.html
+++ b/curso.html
@@ -26,10 +26,12 @@
 <main>
   <ul class="professor">
     <li>
-      <h2>o que fazemos?</h2>
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
-      <p class="    -d">=</p>
-      <p class="     -p">-</p>
+<h2>o que fazemos?</h2>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
+
+ <p class="  é o profissional que promove a interação entre as pessoas e as necessidades do mundo moderno através da programação de dispositivos atendendo normas e padrão de qualidade, usabilidade, integridade e segurança da informação.-d">=</p>
+
+<p class="     -p">-</p>
 <footer>
   <img src="     ">
 <p class="     ">     </p>
