--- a/curso.html
+++ b/curso.html
@@ -16,8 +16,8 @@
     <nav>
     <ul>
     <li><a href="index.html">materias</a></li>
-     <li><a href="index.html">professores</a></li>
-         <li><a href="index.html">sala de aula</a></li>
+     <li><a href="amigos.html">professores</a></li>
+         <li><a href="index.contato.html">sala de aula</a></li>
 
        </ul>
      </nav>
@@ -29,9 +29,9 @@
 <h2>o que fazemos?</h2>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
 
- <p class="  é o profissional que promove a interação entre as pessoas e as necessidades do mundo moderno através da programação de dispositivos atendendo normas e padrão de qualidade, usabilidade, integridade e segurança da informação.-d">=</p>
+ <p class="-d ">é o profissional que promove a interação entre as pessoas e as necessidades do mundo moderno através da programação de dispositivos atendendo normas e padrão de qualidade, usabilidade, integridade e segurança da informação.</p>
 
-<p class="     -p">-</p>
+<p class=" -p "> </p>
 <footer>
   <img src="     ">
 <p class="     ">     </p>
