--- a/amigos.html
+++ b/amigos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<link href="amigos.css">
 <body>
     <header>
         <div class="caixa">
@@ -23,8 +23,12 @@
     <map
 <h1></h1>
 <p>O curso técnico em desenvolvimento de sistemas dura, no mínimo, um ano e meio. Ele prepara os alunos para os setores da tecnologias de informação e comunicação, como em sistemas distribuídos, jogos digitais e computação em nuvem.</p>
+<header><input type="checkbox" name="playPause" id="playPause">
+   
+    <div class="nav-bar"></div>
 
-
+    <section class="blokken">
+    </section>
 
 
 
