--- a/curso.html
+++ b/curso.html
@@ -26,7 +26,7 @@
 <main>
   <ul class="professor">
     <li>
-<h2>o que fazemos?</h2>
+<h2>O QUE O PROFISIONAL FAZ?</h2>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpuWnv1lpEhB3GOaCpWOsVnxkxTAdbflXNWg&usqp=CAU">
 
  <p class="-d ">é o profissional que promove a interação entre as pessoas e as necessidades do mundo moderno através da programação de dispositivos atendendo normas e padrão de qualidade, usabilidade, integridade e segurança da informação.</p>
