--- a/escola.html
+++ b/escola.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="caixa"></div>
- <Men>
-<form>
-
-    <div class="caixa"</div>
-        <h1><</h1>
 
 
 
-</form>
-</Men>
- </header>
+        
+    </header>
 </body>
 </html>
