--- a/index.contato.html
+++ b/index.contato.html
@@ -2,23 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="professores.css">
 <body>
     <header>
-        <div class="caixa"></div>
- <Men>
-<form>
+        <ul>
+            <li><a href="curso.html">CURSO</a></li>
+            <li><a href="index.html">MENU</a></li>
+            <li><a href="amigos.html">AMIGOS</a></li>
+        </ul>
+    </header>
 
-    <div class="caixa"</div>
-        <h1><</h1>
-
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBiA-umkmsnPnzfVzURT-w8eZ_6FXl28ynna8zYukwPamjpB0rGD-N2NPCCFkHn0TkCkk&usqp=CAU">
 
 
 </form>
 </Men>
  </header>
+
 </body>
 </html>
