--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <ul>
-            <li>Quem Somos</li>
-            <li>O colégio</li>
-            <li><a href="amigos.html">Amigos</a></li>
+            <li><a href="curso.html">CURSO</a></li>
+            <li><a href="index.contato.html">COLÉGIO</a></li>
+            <li><a href="amigos.html">AMIGOS</a></li>
         </ul>
     </header>
 
