--- a/amigos.html
+++ b/amigos.html
@@ -30,7 +30,7 @@
     <section class="blokken">
     </section>
 
-
+<img src="https://ih1.redbubble.net/image.3613329178.7530/flat,750x,075,f-pad,750x1000,f8f8f8.jpg">
 
 
 
